update workflow name

--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -3,7 +3,7 @@ on:
     # Run every hour, on the hour. This can be customized to checking as frequently as every 5 minutes.
     - cron:  '0 * * * *'
 
-name: Check for changes
+name: Check for metadata json changes
 
 jobs:
   check:
