--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -1,7 +1,7 @@
 on:
   schedule:
-    # Run every hour, on the hour. This can be customized to checking as frequently as every 5 minutes.
-    - cron:  '0 * * * *'
+    # Run every hour, on the hour.
+    - cron:  '*/15 * * * *'
 
 name: Check for metadata json changes
 
@@ -22,15 +22,19 @@ jobs:
           path: data/data.json
           key: ${{ hashFiles('data/data.json') }}
       
+      # Update timestamp in update-time.txt
+      - name: Update timestamp
+        run: echo "$(TZ=:America/New_York date)" > update-time.txt
+
       # If there was not a cache hit (meaning the response changed), notify me via text message
       # See https://github.com/twilio-labs/actions-sms for setup instructions
       # You could use a different notification action here, so long as you include the `if` condition below
       - name: If data has changed, commit
-        if: steps.cache.outputs.cache-hit != 'true'
+        # if: steps.cache.outputs.cache-hit != 'true'
         run: |-
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add -A
-          timestamp=$(date -u)
+          timestamp=$(TZ=:America/New_York date)
           git commit -m "Update data ${timestamp}" || exit 0
           git push
