--- a/.github/workflows/update-data-json.yml
+++ b/.github/workflows/update-data-json.yml
@@ -31,8 +31,8 @@ jobs:
           echo "$(TZ=:America/New_York date)" > update-time.txt
 
           # Configure git user
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "hrecht[bot]"
+          git config user.email "9753760+hrecht[bot]@users.noreply.github.com"
 
           # Commit files
           git add .
